# phase2-hurdle

./: .gitignore  README.md
collab_protocol/: collab_server.service  collaboration.proto  install.sh  registration.proto
collab_protocol/collaboration_pb2/: setup.py
collab_protocol/python/: collab_client.py  collab_client_logging.conf  collab_server.py
collab_protocol/registration_pb2/: setup.py
container_configuration/: hurdle_traffic_initialization.sh
container_configuration/bot_containers/: configure_bots.py
container_configuration/top_level_container/: markserv.service  top_container_networking_interfaces
container_configuration/traffic_containers/: build_traffic_generators.py  mgen.service
default_radio_api/: status.sh
doc/: Collaboration-Protocol-Specification.md  Colosseum-Radio-Api-Specification.md  Phase-2-Hurdle-Container-Detailed-Specification.md  Phase-2-Hurdle-Instructions-and-Logistics.md  Practice-Bot-Specification.md  RF-Environment-Sim-Specification.md  Scoring-Bot-Specification.md  Timed-Transmissions-with-Stream-Tags.md
doc/resources/: container_id_mapping.xml  phase2_hurdle_design.xml  phase2_hurdle_network_map.xml
gr-envsim/: CMakeLists.txt  MANIFEST.md
gr-envsim/apps/: env_sim_server.grc  env_sim_server.py  env_sim_server_bot_debug.grc  env_sim_server_bot_debug.py  env_sim_server_debug_outputs.grc  env_sim_server_debug_outputs.py  envsim-bot-debug.service  envsim-debug-output.service  envsim.service  envsim_viewer.grc  envsim_viewer.py  temp_py_mod.py
gr-envsim/cmake/Modules/: FindZeroMQ.cmake  envsimConfig.cmake
gr-envsim/docs/: README.envsim
gr-envsim/docs/doxygen/: Doxyfile.in
gr-envsim/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-envsim/grc/: CMakeLists.txt  envsim_env_sink.xml  envsim_env_source.xml  envsim_envsim_source.xml  envsim_socket_meta_pdu.xml  envsim_tx_time_tagger.xml  envsim_zmq_envsim_source.xml
gr-envsim/include/envsim/: CMakeLists.txt  api.h  env_block.h  env_sink.h  env_source.h  envsim_source.h  socket_meta_pdu.h  tx_time_tagger.h  zmq_envsim_source.h
gr-envsim/lib/: CMakeLists.txt  env_block_impl.cc  env_block_impl.h  env_sink_impl.cc  env_sink_impl.h  env_source_impl.cc  env_source_impl.h  envsim_source_impl.cc  envsim_source_impl.h  iq_packet.cc  iq_packet.h  qa_envsim.cc  qa_envsim.h  socket_meta_pdu_impl.cc  socket_meta_pdu_impl.h  stream_pdu_base.cc  stream_pdu_base.h  test_envsim.cc  tx_time_tagger_impl.cc  tx_time_tagger_impl.h  zmq_envsim_source_impl.cc  zmq_envsim_source_impl.h
gr-envsim/python/: CMakeLists.txt  __init__.py  qa_env_sink.py  qa_env_source.py  qa_envsim_source.py  qa_socket_meta_pdu.py  qa_tx_time_tagger.py  qa_zmq_envsim_source.py  test_utils.py
gr-envsim/swig/: CMakeLists.txt  envsim_swig.i
hurdle_execution/: configure_competitor_containers.py  constants.py  container_control.py  envsim_control.py  mgen_parser.py  run_hurdle.py  run_hurdle_bot_debug.py  test_traffic.py  traffic_control.py  traffic_routing_setup.sh  traffic_routing_teardown.sh  traffic_scoring.py  unittest.cfg
